Added users playtime model and add job to culcs time for game.
